[gd_scene load_steps=11 format=3 uid="uid://dr6q7ipurx0nc"]

[ext_resource type="Script" path="res://bullet.gd" id="1_fubuh"]
[ext_resource type="Texture2D" uid="uid://d20lqqybnfnei" path="res://assets/sprites/weapons/mg/bullet-bright.png" id="1_vuwxb"]
[ext_resource type="Texture2D" uid="uid://jrrwytn1q2v2" path="res://assets/sprites/weapons/mg/bullet.png" id="2_0l8qj"]
[ext_resource type="Texture2D" uid="uid://dat1adw8ss0vp" path="res://assets/sprites/weapons/mg/bullet-tracer.png" id="3_boify"]
[ext_resource type="Texture2D" uid="uid://cgfvwjocypcg3" path="res://assets/decals/bullet-hit.png" id="5_j3yqs"]
[ext_resource type="Texture2D" uid="uid://cppvgxdwr5e82" path="res://assets/sprites/fx/bullet-hit/hit-metal0000.png" id="6_67oy4"]
[ext_resource type="Texture2D" uid="uid://b866ie4lgsvds" path="res://assets/sprites/fx/bullet-hit/hit-metal0001.png" id="7_solh2"]
[ext_resource type="Texture2D" uid="uid://ermqclqnpkbc" path="res://assets/sprites/fx/bullet-hit/hit-metal0002.png" id="8_gevkl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0se6f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_vuwxb")
}],
"loop": true,
"name": &"bright",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_0l8qj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_boify")
}],
"loop": true,
"name": &"tracer",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_xhswl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_67oy4")
}, {
"duration": 1.0,
"texture": ExtResource("7_solh2")
}, {
"duration": 1.0,
"texture": ExtResource("8_gevkl")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="Bullet" type="RigidBody2D"]
collision_layer = 0
collision_mask = 2
mass = 0.2
continuous_cd = 1
contact_monitor = true
max_contacts_reported = 1
script = ExtResource("1_fubuh")

[node name="BulletSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0se6f")
animation = &"tracer"
autoplay = "tracer"

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(1, 0, 1, -1, -1, -1, -1, 0)

[node name="BulletHit" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_j3yqs")

[node name="HitFx" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_xhswl")
autoplay = "default"
frame = 3
frame_progress = 1.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
